# Autonomous-Vehicle-using-ROS2-and-Reinforcement-Learning

./: CMakeLists.txt  README.md
auto_car/: monitor_traffic.py  vehicle_driver.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/auto_car/lib/auto_car/: car_controller  inference_node.py  perception_node.py
install/auto_car/share/ament_index/resource_index/package_run_dependencies/: auto_car
install/auto_car/share/ament_index/resource_index/parent_prefix_path/: auto_car
install/auto_car/share/auto_car/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
install/auto_car/share/auto_car/cmake/: auto_carConfig.cmake
install/auto_car/share/auto_car/launch/: sim.launch.py
install/auto_car/share/auto_car/worlds/: city.wbt
launch/: sim.launch.py
rl/: car_env.py  run_rl.py  train_rl.py
scripts/: data_collection_node.py  perception_node.py  perception_v8_node.py  perception_yolo_single.py  telemetry_node.py  training_script.py
src/: car_controller.cpp  control_node.cpp  perception_node.cpp  planning_node.cpp
urdf/: vehicle.urdf
worlds/: city.wbt
